# LingYue

lingyue/: .gitignore  AUTO_REPAIR.py  COMPLETION_CERTIFICATE.json  CREATE_SHORTCUTS.py  FINAL_CHECKLIST.txt  LAUNCHER.py  LICENSE.md  MASTER_VALIDATOR.py  Project_Sovereign_Manifesto.md  SERVER_MONITOR.py  SOVEREIGN.bat  SOVEREIGN_HUB.html  build_all.py  docker-compose.yml
lingyue/.github/workflows/: sovereign.yml
lingyue/data/: hero_matrix.json
lingyue/docs/: Future_Roadmap.md  HANDOVER_MANUAL.md  Launch_Marketing_Kit.md  LingScript_Guide.md  Sovereign_API.md  Sovereign_Easter_Eggs.md  Sovereign_Lore_Map.md  Sovereign_Manual_V1.md  Store_Metadata.md
lingyue/ling-yue-landing/: # 《灵约·无量无尽》.txt  build_log.txt  capacitor.config.ts  index.html  package.json
lingyue/ling-yue-landing/public/: manifest.json
lingyue/ling-yue-landing/src/: App.tsx  index.css  main.tsx
lingyue/ling-yue-landing/src-tauri/: tauri.conf.json
lingyue/lingyue_engine/: CMakeLists.txt  ling_yue_api.lua  lingyue_core.c  lingyue_core.h
lingyue/lingyue_mobile/: README.md  pubspec.yaml
lingyue/lingyue_mobile/lib/: main.dart
lingyue/lingyue_mobile/test/: widget_test.dart
lingyue/lingyue_mobile/web/: index.html  manifest.json
lingyue/lingyue_mobile/windows/: CMakeLists.txt
lingyue/lingyue_native/: README.md  pubspec.yaml
lingyue/lingyue_native/lib/: camp_main.dart  main.dart
lingyue/lingyue_native/linux/: CMakeLists.txt
lingyue/lingyue_server/: package-lock.json  server.js
lingyue/scripts/: backup_sovereign.py  check_integrity.py  sovereign_installer.iss
(+111 files in other folders)
